# OpenMp6-11

./: CMakeLists.txt  task10.cpp  task11.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
